fixed scrollbar issue in Firefox

--- a/src/browser/index.css
+++ b/src/browser/index.css
@@ -1034,6 +1034,9 @@
   .overflow-y-auto {
     overflow-y: auto;
   }
+  .overflow-y-hidden {
+    overflow-y: hidden;
+  }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
